add endpoint to favicon.ico to avoid errors
